--- a/USTHWeather/app/src/main/res/values/strings.xml
+++ b/USTHWeather/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
 
     <string name="Sunday">Sun</string>
     <string name="SunWea">Foggy and Humid \n15&#8451; - 18&#8451;</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
